* add xfce4-power-manager for riscv64

--- a/xfce4/xfce4-power-manager/PKGBUILD
+++ b/xfce4/xfce4-power-manager/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xfce4-power-manager
 pkgver=4.16.0
 pkgrel=3
 pkgdesc="Power manager for the Xfce desktop"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/xfce/xfce4-power-manager/start"
 license=('GPL2')
 groups=('xfce4')
