* add libkeybinder3 for riscv64 & powerpc

--- a/libkeybinder3/PKGBUILD
+++ b/libkeybinder3/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=libkeybinder3
 pkgver=0.3.2
 pkgrel=3
 pkgdesc="A library for registering global keyboard shortcuts"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/engla/keybinder/tree/keybinder-3.0"
 license=('MIT')
 depends=('gtk3')
