--- a/xfce4/xfce4-pulseaudio-plugin/PKGBUILD
+++ b/xfce4/xfce4-pulseaudio-plugin/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=xfce4-pulseaudio-plugin
 pkgver=0.4.3
 pkgrel=1
 pkgdesc="Pulseaudio plugin for Xfce4 panel"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 url="https://goodies.xfce.org/projects/panel-plugins/xfce4-pulseaudio-plugin"
 groups=('xfce4-goodies')
