* add xfce4-screensaver for riscv64

--- a/xfce4/xfce4-screensaver/PKGBUILD
+++ b/xfce4/xfce4-screensaver/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xfce4-screensaver
 pkgver=4.16.0
 pkgrel=1
 pkgdesc='Xfce Screensaver'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://docs.xfce.org/apps/screensaver/start'
 license=('GPL2')
 groups=('xfce4-goodies')
