* add hddtemp for riscv64

--- a/hddtemp/PKGBUILD
+++ b/hddtemp/PKGBUILD
@@ -13,7 +13,7 @@ pkgrel=3
 pkgdesc='Gives you the temperature of your hard drive by reading S.M.A.R.T. information'
 url='https://savannah.nongnu.org/projects/hddtemp/'
 license=('GPL')
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 source=("https://download.savannah.gnu.org/releases/${pkgname}/${pkgname}-${_origver}.tar.bz2"
         "https://deb.debian.org/debian/pool/main/h/${pkgname}/${pkgname}_${_patchver}.diff.gz"
         'service')
