* add polkit-gnome for riscv64

--- a/gnome/polkit-gnome/PKGBUILD
+++ b/gnome/polkit-gnome/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=polkit-gnome
 pkgver=0.105
 pkgrel=8
 pkgdesc='Legacy polkit authentication agent for GNOME'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://gitlab.gnome.org/Archive/policykit-gnome'
 license=('LGPL')
 depends=('gtk3' 'polkit')
