--- a/xfce4/xfce4-session/PKGBUILD
+++ b/xfce4/xfce4-session/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xfce4-session
 pkgver=4.16.0
 pkgrel=2
 pkgdesc="Session manager for Xfce"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/xfce/xfce4-session/start"
 license=('GPL2')
 groups=('xfce4')
