--- a/gnome/gnome-themes-extra/PKGBUILD
+++ b/gnome/gnome-themes-extra/PKGBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgname=gnome-themes-extra
-pkgver=3.28
-pkgrel=2
+pkgver=3.28+r6+g45b1d457
+pkgrel=1
 pkgdesc="Extra Themes for GNOME Applications"
 url="https://gitlab.gnome.org/GNOME/gnome-themes-extra"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL2.1)
 depends=(cantarell-fonts)
 makedepends=(intltool gtk2 gtk3 git)
@@ -14,21 +14,19 @@ optdepends=('gtk-engines: HighContrast GTK2 theme')
 provides=("gnome-themes-standard=$pkgver")
 conflicts=(gnome-themes-standard)
 replaces=('gnome-themes-standard<3.27.92')
-groups=(gnome)
-_commit=9f581269243dd7e76b3eb8cec9cf4128ab17da9e  # tags/3.28^0
+options=('!emptydirs')
+_commit=45b1d457c63b1c7f6c8dcb7fe29b23ec7cd63a14  # master
 source=("git+https://gitlab.gnome.org/GNOME/gnome-themes-extra.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
   cd $pkgname
-  git describe --tags | sed 's/-/+/g'
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
   cd $pkgname
-  mkdir m4
-  intltoolize
-  autoreconf -fvi
+  NOCONFIGURE=1 ./autogen.sh
 }
 
 build() {
