* add xfce4-settings for riscv64

--- a/xfce4/xfce4-settings/PKGBUILD
+++ b/xfce4/xfce4-settings/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-settings
 pkgver=4.16.2
 pkgrel=1
 pkgdesc="Settings manager of the Xfce desktop"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/xfce/xfce4-settings/start"
 license=('GPL2')
 groups=('xfce4')
