--- a/xfce4/xfce4-smartbookmark-plugin/PKGBUILD
+++ b/xfce4/xfce4-smartbookmark-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-smartbookmark-plugin
 pkgver=0.5.2
 pkgrel=1
 pkgdesc="Allows you to send requests directly to your browser and perform a custom search"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/panel-plugins/xfce4-smartbookmark-plugin"
 license=('GPL2')
 groups=('xfce4-goodies')
