--- a/xfce4/xfce4-systemload-plugin/PKGBUILD
+++ b/xfce4/xfce4-systemload-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-systemload-plugin
 pkgver=1.3.1
 pkgrel=1
 pkgdesc="A system load plugin for the Xfce4 panel"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('custom')
 url="https://docs.xfce.org/panel-plugins/xfce4-systemload-plugin"
 groups=('xfce4-goodies')
