--- a/xfce4/xfce4-time-out-plugin/PKGBUILD
+++ b/xfce4/xfce4-time-out-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-time-out-plugin
 pkgver=1.1.2
 pkgrel=1
 pkgdesc="Take a break from your computer with this plugin for Xfce4"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/panel-plugins/xfce4-time-out-plugin"
 groups=('xfce4-goodies')
 license=('GPL')
