--- a/xfce4/xfce4-timer-plugin/PKGBUILD
+++ b/xfce4/xfce4-timer-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-timer-plugin
 pkgver=1.7.1
 pkgrel=1
 pkgdesc="Plugin to track time for the Xfce4 panel"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/panel-plugins/xfce4-timer-plugin"
 license=('GPL2')
 groups=('xfce4-goodies')
