* add xfce4-verve-plugin for riscv64 & powerpc

--- a/xfce4/xfce4-verve-plugin/PKGBUILD
+++ b/xfce4/xfce4-verve-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-verve-plugin
 pkgver=2.0.1
 pkgrel=1
 pkgdesc="Command line plugin for the Xfce panel"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 url="https://docs.xfce.org/panel-plugins/xfce4-verve-plugin"
 groups=('xfce4-goodies')
