--- a/xfce4/xfce4-wavelan-plugin/PKGBUILD
+++ b/xfce4/xfce4-wavelan-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-wavelan-plugin
 pkgver=0.6.2
 pkgrel=1
 pkgdesc="Plugin to monitor wifi connectivity for the Xfce4 panel"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/panel-plugins/xfce4-wavelan-plugin"
 license=('custom')
 groups=('xfce4-goodies')
