--- a/xfce4/xfce4-weather-plugin/PKGBUILD
+++ b/xfce4/xfce4-weather-plugin/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xfce4-weather-plugin
 pkgver=0.11.0
 pkgrel=1
 pkgdesc="A weather plugin for the Xfce4 panel"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/panel-plugins/xfce4-weather-plugin"
 license=('GPL2')
 groups=('xfce4-goodies')
