--- a/xfce4/xfce4-whiskermenu-plugin/PKGBUILD
+++ b/xfce4/xfce4-whiskermenu-plugin/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=xfce4-whiskermenu-plugin
 pkgver=2.7.1
 pkgrel=1
 pkgdesc='Menu for Xfce4'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://gottcode.org/xfce4-whiskermenu-plugin/'
 groups=('xfce4-goodies')
 license=('GPL2')
