--- a/flac/PKGBUILD
+++ b/flac/PKGBUILD
@@ -4,48 +4,57 @@
 
 pkgbase=flac
 pkgname=('flac' 'flac-doc')
-pkgver=1.3.3
-pkgrel=3
+pkgver=1.3.4
+pkgrel=2
 pkgdesc='Free Lossless Audio Codec'
 url='https://xiph.org/flac/'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('BSD' 'GPL')
 depends=('gcc-libs' 'libogg')
-#makedepends=('doxygen')
-source=(https://downloads.xiph.org/releases/flac/${pkgbase}-${pkgver}.tar.xz)
-sha256sums=('213e82bd716c9de6db2f98bcadbc4c24c7e2efe8c75939a1a84e28539c4e1748')
-sha512sums=('d6417e14fab0c41b2df369e5e39ce62a5f588e491af4d465b0162f74e171e5549b2f061867f344bfbf8aaccd246bf5f2acd697e532a2c7901c920c69429b1a28')
+makedepends=('doxygen' 'cmake' 'ninja')
+makedepends_x86_64=('nasm')
+source=(https://downloads.xiph.org/releases/flac/flac-${pkgver}.tar.xz)
+sha512sums=('4a626e8a1bd126e234c0e5061e3b46f3a27c2065fdfa228fd8cf00d3c7fa2c05fafb5cec36acce7bfce4914bfd7db0b2a27ee15decf2d8c4caad630f62d44ec9')
+
+prepare() {
+  cd flac-${pkgver}
+}
 
 build() {
-  cd ${pkgbase}-${pkgver}
-  ./configure \
-    --prefix=/usr \
-    --disable-sse
-  make
+  cmake -S flac-${pkgver} -B build -G Ninja \
+    -DCMAKE_BUILD_TYPE=None \
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_INSTALL_MANDIR=/usr/share/man/man1 \
+    -DBUILD_SHARED_LIBS=ON \
+    -DWITH_STACK_PROTECTOR=OFF \
+    -DNDEBUG=ON
+  cmake --build build
 }
 
 check() {
-  cd ${pkgbase}-${pkgver}
-  make check
+  FLAC__TEST_LEVEL=0 cmake --build build --target test
 }
 
 package_flac() {
-  options=('!docs')
   provides=('libFLAC.so' 'libFLAC++.so')
 
-  cd ${pkgbase}-${pkgver}
-  make DESTDIR="${pkgdir}" install
-  install -Dm 644 COPYING.Xiph -t "${pkgdir}/usr/share/licenses/${pkgname}"
+  DESTDIR="${pkgdir}" cmake --install build
+
+  install -Dm 644 flac-${pkgver}/src/*/*.m4 -t "${pkgdir}/usr/share/aclocal"
+
+  mkdir -p doc/usr/share
+  mv {"${pkgdir}",doc}/usr/share/doc
+
+  install -Dm 644 flac-${pkgver}/COPYING.Xiph -t "${pkgdir}/usr/share/licenses/${pkgname}"
 }
 
 package_flac-doc() {
   pkgdesc+=' documentation'
-  depends=('flac')
+  depends=()
 
-  cd ${pkgbase}-${pkgver}
-  make DESTDIR="${pkgdir}" -C doc install
-  sed -i "s|${srcdir}/${pkgbase}-${pkgver}|/usr|" "${pkgdir}/usr/share/doc/${pkgbase}/FLAC.tag"
-  install -Dm 644 COPYING.Xiph -t "${pkgdir}/usr/share/licenses/${pkgname}"
+  mv doc/* "$pkgdir"
+
+  install -Dm 644 flac-${pkgver}/COPYING.Xiph -t "${pkgdir}/usr/share/licenses/${pkgname}"
 }
 
-# vim: ts=2 sw=2 et:
+# vim:set sw=2 et:
