--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -7,7 +7,7 @@
 pkgbase=mesa
 pkgname=('vulkan-mesa-layers' 'opencl-mesa' 'vulkan-radeon' 'vulkan-swrast' 'libva-mesa-driver' 'mesa-vdpau' 'mesa')
 pkgdesc="An open-source implementation of the OpenGL specification"
-pkgver=21.3.7
+pkgver=22.0.0
 pkgrel=1
 arch=(x86_64 powerpc64le riscv64)
 #arch=(powerpc)
@@ -21,7 +21,7 @@ source=(https://mesa.freedesktop.org/archive/mesa-${pkgver}.tar.xz{,.sig}
         LICENSE
         0001-amd-common-Add-missing-line-from-backport-for-cohere.patch
         0002-big-endian-flipping.patch)
-sha512sums=('0991543e9435457fa4d077517408b3f197be32ed61a6c7ca34ddb3906eed208791f1a57227f74115f99df18e612efab1d2c6809b7cf426d273633b53d4aefc88'
+sha512sums=('9faef66adbacba24d11dfe8e2d1a753295798883a10a7cc91e6df9d678c64a8286a12e60c0d8576d944a8cc76f00c30d27c3a71d3458bbe3dbcd66c88a454c3b'
             'SKIP'
             'f9f0d0ccf166fe6cb684478b6f1e1ab1f2850431c06aa041738563eb1808a004e52cdec823c103c9e180f03ffc083e95974d291353f0220fe52ae6d4897fecc7'
             'f47c227dc888f2030491eaad42d42150539f2c9fc3bbc76d0fd46dc2d85482f520d929b01314cabb963dd36cc3729967f40c7bbfde28fc655024ef52d9fc71b7'
@@ -45,7 +45,6 @@ build() {
     -D b_ndebug=true \
     -D platforms=x11,wayland \
     -D gallium-drivers=r300,r600,radeonsi,nouveau,virgl,swrast,zink \
-    -D dri-drivers=r100,r200,nouveau \
     -D vulkan-drivers=amd,swrast \
     -D vulkan-layers=device-select,overlay \
     -D dri3=enabled \
@@ -59,7 +58,7 @@ build() {
     -D gallium-xa=enabled \
     -D gallium-xvmc=disabled \
     -D gbm=enabled \
-    -D gles1=enabled \
+    -D gles1=disabled \
     -D gles2=enabled \
     -D glvnd=true \
     -D glx=dri \
