* update mtools to 1:4.0.38-1

--- a/mtools/PKGBUILD
+++ b/mtools/PKGBUILD
@@ -4,33 +4,35 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=mtools
-pkgver=4.0.35
+pkgver=4.0.38
 pkgrel=1
 epoch=1
 pkgdesc="A collection of utilities to access MS-DOS disks"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.gnu.org/software/mtools/"
-license=('GPL3')
-depends=('bash' 'glibc')
-makedepends=('libx11' 'texinfo')
-optdepends=('libx11: required by floppyd'
-            'libxau: required by floppyd')
-backup=("etc/${pkgname}.conf")
-source=("https://ftp.gnu.org/gnu/mtools/${pkgname}-${pkgver}.tar.bz2"{,.sig})
-sha512sums=('ef563b3319285667993c82d819e08cb819a6bcd71c466fc252568996b4218cfb3731107ffcd6150ba33c0837e012e02057def41e2b011f751eaf550bfa366a10'
+license=(GPL3)
+depends=(bash glibc)
+makedepends=(libx11 texinfo)
+optdepends=(
+  'libx11: required by floppyd'
+  'libxau: required by floppyd'
+)
+backup=(etc/$pkgname.conf)
+source=(https://ftp.gnu.org/gnu/mtools/$pkgname-$pkgver.tar.bz2{,.sig})
+sha512sums=('045e7dba159699c53abefd69e2065c116e2e360e7ec537df1e4d38309fb03587c600bb930363ecffef48cef1c8c118146691cf9a35c36abbb40e4546e532ce4a'
             'SKIP')
-b2sums=('9c1ac7f3ad3f9f13a572d0e1ea3c3a9d79bd08f0ae963c7357a19a687b74536cd8442eb167a9e50f7d22398c56736753b0d98bccdaa4c7d8427d1c09e1dd786c'
+b2sums=('4d486b9bcbf31c9056ed6460d3d7ccb160f2d3d68e2b9a87590821251513a299ab321df825821722c41e13f608250eecad52e828c901ab956e471cd56871a50c'
         'SKIP')
 validpgpkeys=('51A23D9D7C4DF41AA48FA893E99CF5537790B839') # Alain KNAFF <alain@knaff.lu>
 
 prepare() {
-  cd "${pkgname}-${pkgver}"
+  cd $pkgname-$pkgver
   # comment entry in default config
   sed -e '/^SAMPLE FILE$/s:^:# :' -i mtools.conf
 }
 
 build() {
-  cd "${pkgname}-${pkgver}"
+  cd $pkgname-$pkgver
   ./configure --prefix=/usr \
               --mandir=/usr/share/man \
               --infodir=/usr/share/info \
@@ -39,8 +41,8 @@ build() {
 }
 
 package() {
-  cd "${pkgname}-${pkgver}"
-  make DESTDIR="${pkgdir}" install
-  install -vDm 644 mtools.conf -t "${pkgdir}/etc/"
-  install -vDm 644 {README,NEWS} -t "${pkgdir}/usr/share/doc/${pkgname}"
+  cd $pkgname-$pkgver
+  make DESTDIR="$pkgdir" install
+  install -vDm 644 mtools.conf -t "$pkgdir/etc/"
+  install -vDm 644 {README,NEWS} -t "$pkgdir/usr/share/doc/$pkgname"
 }
