--- a/liburcu/PKGBUILD
+++ b/liburcu/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Yggdrasil <tetzank at web dot de>
 
 pkgname=liburcu
-pkgver=0.13.0
+pkgver=0.13.1
 pkgrel=1
 pkgdesc="LGPLv2.1 userspace RCU (read-copy-update) library"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -13,12 +13,12 @@ license=('LGPL2.1')
 validpgpkeys=('2A0B4ED915F2D3FA45F5B16217280A9781186ACF')
 source=(https://lttng.org/files/urcu/userspace-rcu-${pkgver}.tar.bz2{,.asc})
 depends=()
-sha1sums=('fd2ea98735b7a174ac539b8f4624040cbba9095e'
+sha1sums=('ff346e984d692cb8e6ea557d2b043df666f90ce7'
           'SKIP')
 
 build() {
     cd "$srcdir"/userspace-rcu-${pkgver}
-    ./configure --prefix=/usr --buil=${CHOST}
+    ./configure --prefix=/usr --build=${CHOST}
     make
 }
 
