--- a/miniupnpc/PKGBUILD
+++ b/miniupnpc/PKGBUILD
@@ -6,10 +6,10 @@
 pkgbase=miniupnpc
 pkgname=(miniupnpc python-miniupnpc)
 pkgver=2.2.2
-pkgrel=1
+pkgrel=2
 pkgdesc='Small UPnP client library/tool to access Internet Gateway Devices'
 url='https://miniupnp.tuxfamily.org/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('BSD')
 makedepends=('sh' 'glibc' 'lsb-release' 'python' 'python-setuptools')
 source=(https://miniupnp.tuxfamily.org/files/${pkgname}-${pkgver}.tar.gz{,.sig})
