* update wireless_tools to 30.pre9-3

--- a/wireless_tools/PKGBUILD
+++ b/wireless_tools/PKGBUILD
@@ -6,11 +6,11 @@
 pkgname=wireless_tools
 pkgver=30.pre9
 _pkgver=${pkgver%.pre*}
-pkgrel=4
+pkgrel=3
 pkgdesc='Tools allowing to manipulate the Wireless Extensions'
 url='https://hewlettpackard.github.io/wireless-tools/Tools.html'
 license=('GPL')
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 source=("https://hewlettpackard.github.io/wireless-tools/${pkgname}.${pkgver}.tar.gz")
 sha256sums=('abd9c5c98abf1fdd11892ac2f8a56737544fe101e1be27c6241a564948f34c63')
 
