* update bcg729 to 1.1.1-1

--- a/bcg729/PKGBUILD
+++ b/bcg729/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=1.1.1
 pkgrel=1
 pkgdesc='Encoder and decoder of the ITU G.729 Annex A/B speech codec'
 url='https://www.linphone.org/technical-corner/bcg729/overview'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 makedepends=('cmake')
 depends=('glibc')
