--- a/lua52/PKGBUILD
+++ b/lua52/PKGBUILD
@@ -7,7 +7,8 @@ pkgname=lua52
 pkgver=5.2.4
 pkgrel=5
 pkgdesc='Powerful lightweight programming language designed for extending applications'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url='https://www.lua.org/'
 depends=('readline')
 license=('MIT')
