--- a/qt5/qt5-base/PKGBUILD
+++ b/qt5/qt5-base/PKGBUILD
@@ -4,9 +4,10 @@
 
 pkgbase=qt5-base
 pkgname=(qt5-base qt5-xcb-private-headers)
-pkgver=5.15.2+kde+r304
+_basever=5.15.3
+pkgver=5.15.3+kde+r133
 pkgrel=1
-_commit=8186bdbc57290ffec5e46e0c8b80d2c2117d40e9
+_commit=e68ca8e51375d963b2391715f70b42707992dbd8
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
