* update qt5-base to 5.15.3+kde+r133-1

--- a/qt5/qt5-base/PKGBUILD
+++ b/qt5/qt5-base/PKGBUILD
@@ -40,13 +40,11 @@ sha256sums=('SKIP'
 
 pkgver() {
   cd $_pkgfqn
-  echo "5.15.2+kde+r"`git rev-list --count origin/5.15.2..$_commit`
+  echo "$_basever+kde+r"`git rev-list --count v$_basever-lts-lgpl..$_commit`
 }
 
 prepare() {
   cd ${_pkgfqn}
-
-  git revert -n 6344955d17e17e2398720fe60c34cfc2a4a95208 # Revert version bump
 
   patch -p1 < ../qt5-base-cflags.patch # Use system CFLAGS in qmake
   patch -p1 < ../qt5-base-nostrip.patch # Don't strip binaries with qmake
