--- a/grub/PKGBUILD
+++ b/grub/PKGBUILD
@@ -4,37 +4,69 @@
 # Contributor: Tobias Powalowski <tpowa@archlinux.org>
 # Contributor: Keshav Amburay <(the ddoott ridikulus ddoott rat) (aatt) (gemmaeiil) (ddoott) (ccoomm)>
 
+## "1" to enable IA32-EFI build in Arch x86_64, "0" to disable
+_IA32_EFI_IN_ARCH_X64="1"
+
 ## "1" to enable EMU build, "0" to disable
 _GRUB_EMU_BUILD="0"
 
-_GRUB_EXTRAS_COMMIT="136763a4cc9ca3a4f59d05b79eede2159d6f441e"
-
-_UNIFONT_VER="12.1.02"
+case "${CARCH}" in
+  powerpc*)
+    _PLATFORM="ieee1275"
+    _TARGET="powerpc"
+    _EFI_ARCH=""
+    _EMU_ARCH="powerpc"
+  ;;
+  riscv64)
+    _PLATFORM="efi"
+    _TARGET="riscv64"
+    _EFI_ARCH="riscv64"
+    _EMU_ARCH="riscv64"
+  ;;
+  i686)
+    _PLATFORM="pc"
+    _TARGET="i386"
+    _EFI_ARCH="i386"
+    _EMU_ARCH="i386"
+  ;;
+  x86_64)
+    _PLATFORM="pc"
+    _TARGET="x86_64"
+    _EFI_ARCH="x86_64"
+    _EMU_ARCH="x86_64"
+  ;;
+esac
 
 pkgname='grub'
 pkgdesc='GNU GRand Unified Bootloader (2)'
-pkgver=2.04
-pkgrel=2
 epoch=2
+_tag='53c5000739db114c229fe69ec3d4b76b92441098' # git rev-parse grub-${_pkgver}
+_unifont_ver='14.0.01'
+_pkgver=2.06
+pkgver=${_pkgver/-/}
+pkgrel=4.1
 url='https://www.gnu.org/software/grub/'
-arch=(powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 license=('GPL3')
 backup=('etc/default/grub'
         'etc/grub.d/40_custom')
 install="${pkgname}.install"
 options=('!makeflags')
 
-conflicts=('grub-common' 'grub-bios' 'grub-emu' 'grub-legacy')
-replaces=('grub-common' 'grub-bios' 'grub-emu')
-provides=('grub-common' 'grub-bios' 'grub-emu')
+conflicts=('grub-common' 'grub-bios' 'grub-emu' "grub-efi-${_EFI_ARCH}" 'grub-legacy')
+replaces=('grub-common' 'grub-bios' 'grub-emu' "grub-efi-${_EFI_ARCH}")
+provides=('grub-common' 'grub-bios' 'grub-emu' "grub-efi-${_EFI_ARCH}")
 
-makedepends=('git' 'rsync' 'xz' 'freetype2' 'python' 'autogen'
+makedepends=('git' 'rsync' 'xz' 'freetype2' 'ttf-dejavu' 'python' 'autogen'
              'texinfo' 'help2man' 'gettext' 'device-mapper' 'fuse2')
-[ "${CARCH}" == 'powerpc64le' ] && makedepends+=('powerpc64-linux-gnu-gcc') # check https://github.com/kth5/archpower-tools for this crosscompiler
-depends=('sh' 'xz' 'gettext' 'device-mapper' 'bc')
+makedepends_powerpc64le=('powerpc-unknown-linux-gnu-gcc')
+depends=('sh' 'xz' 'gettext' 'device-mapper')
 optdepends=('freetype2: For grub-mkfont usage'
             'fuse2: For grub-mount usage'
-            'dosfstools: For grub-mkrescue FAT FS'
+            'dosfstools: For grub-mkrescue FAT FS and EFI support'
+            'lzop: For grub-mkrescue LZO support'
+            'efibootmgr: For grub-install EFI support'
             'libisoburn: Provides xorriso for generating grub rescue iso using grub-mkrescue'
             'os-prober: To detect other OSes when generating grub.cfg in BIOS systems'
             'mtools: For grub-mkrescue FAT FS support')
@@ -45,24 +77,37 @@ if [[ "${_GRUB_EMU_BUILD}" == "1" ]]; then
                  'sdl: For grub-emu SDL support')
 fi
 
-source=("https://ftp.gnu.org/gnu/${pkgname}/${pkgname}-${pkgver}.tar.xz"
-        "https://git.savannah.nongnu.org/cgit/grub-extras.git/snapshot/grub-extras-${_GRUB_EXTRAS_COMMIT}.tar.gz"
-        "https://ftp.gnu.org/gnu/unifont/unifont-${_UNIFONT_VER}/unifont-${_UNIFONT_VER}.bdf.gz"
-        '0003-10_linux-detect-archlinux-initramfs.patch'
-        '0004-add-GRUB_COLOR_variables.patch'
+validpgpkeys=('E53D497F3FA42AD8C9B4D1E835A93B74E82E4209'  # Vladimir 'phcoder' Serbinenko <phcoder@gmail.com>
+              'BE5C23209ACDDACEB20DB0A28C8189F1988C2166'  # Daniel Kiper <dkiper@net-space.pl>
+              '95D2E9AB8740D8046387FD151A09227B1F435A33') # Paul Hardy <unifoundry@unifoundry.com>
+
+source=("git+https://git.savannah.gnu.org/git/grub.git#tag=${_tag}?signed"
+        'git+https://git.savannah.gnu.org/git/gnulib.git'
+        "https://ftp.gnu.org/gnu/unifont/unifont-${_unifont_ver}/unifont-${_unifont_ver}.bdf.gz"{,.sig}
+        '0001-00_header-add-GRUB_COLOR_-variables.patch'
+        '0002-10_linux-detect-archlinux-initramfs.patch'
         'grub.default'
-	'install_powerpc_machtypes.patch'
-	'ppc64el-disable-vsx.patch'
-	'ieee1275-clear-reset.patch')
-sha256sums=('e5292496995ad42dabe843a0192cf2a2c502e7ffcc7479398232b10a472df77d'
-            '15cd8d6d2241bb8442718f22bd597db67b2dc1466673efbf63879d2a29f92ed1'
-            '04d652be1e28a6d464965c75c71ac84633085cd0960c2687466651c34c94bd89'
-            '171415ab075d1ac806f36c454feeb060f870416f24279b70104bba94bd6076d4'
-            'a5198267ceb04dceb6d2ea7800281a42b3f91fd02da55d2cc9ea20d47273ca29'
-            '331f5d3f541da14563c804f6146163997a0399a62e73ecadbcd082817a03d5c4'
-            'c38364cd98b213138a66fec3282734e73e6b976819bece8d7535927d8acb42dd'
-            '53e86d957be58fdc3587397aee2a51c45405562b3dfe0a55433af2e0e4a2fb8c'
-            'edd1fa6cade5ef26b2830324ba4315655fa0eeb71a75135e1b15049344f7451f')
+	'sbat.csv')
+sha256sums=('SKIP'
+            'SKIP'
+            '391d194f6307fcd0915daafd360509a734e26f3e4013e63d47deb2530d59e66e'
+            'SKIP'
+            '5dee6628c48eef79812bb9e86ee772068d85e7fcebbd2b2b8d1e19d24eda9dab'
+            '8488aec30a93e8fe66c23ef8c23aefda39c38389530e9e73ba3fbcc8315d244d'
+            '99feaaecb725a29cf404b98eb29ce0fc21ce1babcaf036d86c31ab492d52f8e5'
+            'f2ddae7b580e7244ad001e69d2a4b126a2704d3a0aa787e03488d89bdbd0b78d')
+
+_backports=(
+	# fs/xfs: Fix unreadable filesystem with v4 superblock
+	'a4b495520e4dc41a896a8b916a64eda9970c50ea'
+
+	# RISC-V: Adjust -march flags for binutils 2.38
+	'049efdd72eb7baa7b2bf8884391ee7fe650da5a0'
+)
+
+case "${CARCH}" in
+  powerpc64le) export CC=powerpc-unknown-linux-gnu-gcc ;;
+esac
 
 _configure_options=(
 	FREETYPE="pkg-config freetype2"
@@ -85,21 +130,32 @@ _configure_options=(
 	--with-grubdir="grub"
 	--disable-silent-rules
 	--disable-werror
-	--disable-auto-linux-mem-opt
-        --target=powerpc64-linux-gnu
-        --build=powerpc64-linux-gnu
-        --host=$CHOST
 )
 
 prepare() {
-	cd "${srcdir}/grub-${pkgver}/"
+	cd "${srcdir}/grub/"
 
-        echo "Patch to detect of Arch Linux initramfs images by grub-mkconfig..."
-        patch -Np1 -i "${srcdir}/0003-10_linux-detect-archlinux-initramfs.patch"
+	echo "Apply backports..."
+	local _c
+	for _c in "${_backports[@]}"; do
+		git log --oneline -1 "${_c}"
+		git cherry-pick -n "${_c}"
+	done
 
-        echo "Patch to enable GRUB_COLOR_* variables in grub-mkconfig..."
-        ## Based on http://lists.gnu.org/archive/html/grub-devel/2012-02/msg00021.html
-        patch -Np1 -i "${srcdir}/0004-add-GRUB_COLOR_variables.patch"
+	echo "Patch to enable GRUB_COLOR_* variables in grub-mkconfig..."
+	## Based on http://lists.gnu.org/archive/html/grub-devel/2012-02/msg00021.html
+        patch -Np1 -i "${srcdir}/0001-00_header-add-GRUB_COLOR_-variables.patch"
+
+	echo "Patch to detect of Arch Linux initramfs images by grub-mkconfig..."
+        patch -Np1 -i "${srcdir}/0002-10_linux-detect-archlinux-initramfs.patch"
+
+
+	# get linux support fro riscv64 in
+	if [ "${CARCH}" = 'riscv64']; then
+		git remote add github.com_tekkamanninja https://github.com/tekkamanninja/grub.git
+		git fetch github.com_tekkamanninja
+		git checkout github.com_tekkamanninja/riscv_devel_Nikita_V3
+	fi
 
 	echo "Fix DejaVuSans.ttf location so that grub-mkfont can create *.pf2 files for starfield theme..."
 	sed 's|/usr/share/fonts/dejavu|/usr/share/fonts/dejavu /usr/share/fonts/TTF|g' -i "configure.ac"
@@ -113,50 +169,185 @@ prepare() {
 	echo "Pull in latest language files..."
 	./linguas.sh
 
-	echo "Remove not working langs which need LC_ALL=C.UTF-8..."
-	sed -e 's#en@cyrillic en@greek##g' -i "po/LINGUAS"
-
 	echo "Avoid problem with unifont during compile of grub..."
 	# http://savannah.gnu.org/bugs/?40330 and https://bugs.archlinux.org/task/37847
-	gzip -dc "${srcdir}/unifont-${_UNIFONT_VER}.bdf.gz" > "unifont.bdf"
-	
-	echo "Run autogen.sh..."
-	./autogen.sh
+	gzip -cd "${srcdir}/unifont-${_unifont_ver}.bdf.gz" > "unifont.bdf"
+
+	echo "Run bootstrap..."
+	./bootstrap \
+		--gnulib-srcdir="${srcdir}/gnulib/" \
+		--no-git
+
+	echo "Make translations reproducible..."
+	sed -i '1i /^PO-Revision-Date:/ d' po/*.sed
 }
 
-build() {
-	cd "${srcdir}/grub-${pkgver}/"
+_build_grub-common_and_bios() {
+	echo "Set ARCH dependent variables for bios build..."
+	if [[ "${CARCH}" == 'x86_64' ]]; then
+		_EFIEMU="--enable-efiemu"
+	else
+		_EFIEMU="--disable-efiemu"
+	fi
+
+	echo "Copy the source for building the bios part..."
+	cp -r "${srcdir}/grub/" "${srcdir}/grub-bios/"
+	cd "${srcdir}/grub-bios/"
+
+	echo "Unset all compiler FLAGS for bios build..."
 	unset CFLAGS
 	unset CPPFLAGS
 	unset CXXFLAGS
 	unset LDFLAGS
 	unset MAKEFLAGS
 
+	echo "Run ./configure for bios build..."
 	./configure \
-		--with-platform="ieee1275" \
-		--target="powerpc" \
-		--disable-efiemu \
+		--with-platform="${_PLATFORM}" \
+		--target="${_TARGET}" \
+		"${_EFIEMU}" \
 		--enable-boot-time \
-		"${_configure_options[@]}" \
-		--with-platform="ieee1275" 
+		"${_configure_options[@]}"
 
+	if [ ! -z "${SOURCE_DATE_EPOCH}" ]; then
+		echo "Make info pages reproducible..."
+		touch -d "@${SOURCE_DATE_EPOCH}" $(find -name '*.texi')
+	fi
 
-	echo "Run make for powerpc-ieee1275 build..."
+	echo "Run make for bios build..."
 	make
-
 }
 
-package() {
-	cd "${srcdir}/grub-${pkgver}/"
+_build_grub-efi() {
+	echo "Copy the source for building the ${_EFI_ARCH} efi part..."
+	cp -r "${srcdir}/grub/" "${srcdir}/grub-efi-${_EFI_ARCH}/"
+	cd "${srcdir}/grub-efi-${_EFI_ARCH}/"
+
+	echo "Unset all compiler FLAGS for ${_EFI_ARCH} efi build..."
+	unset CFLAGS
+	unset CPPFLAGS
+	unset CXXFLAGS
+	unset LDFLAGS
+	unset MAKEFLAGS
+
+	echo "Run ./configure for ${_EFI_ARCH} efi build..."
+	./configure \
+		--with-platform="efi" \
+		--target="${_EFI_ARCH}" \
+		--disable-efiemu \
+		--enable-boot-time \
+		"${_configure_options[@]}"
+
+	echo "Run make for ${_EFI_ARCH} efi build..."
+	make
+}
+
+_build_grub-emu() {
+	echo "Copy the source for building the emu part..."
+	cp -r "${srcdir}/grub/" "${srcdir}/grub-emu/"
+	cd "${srcdir}/grub-emu/"
+
+	echo "Unset all compiler FLAGS for emu build..."
+	unset CFLAGS
+	unset CPPFLAGS
+	unset CXXFLAGS
+	unset LDFLAGS
+	unset MAKEFLAGS
+
+	echo "Run ./configure for emu build..."
+	./configure \
+		--with-platform="emu" \
+		--target="${_EMU_ARCH}" \
+		--enable-grub-emu-usb=no \
+		--enable-grub-emu-sdl=no \
+		--disable-grub-emu-pci \
+		"${_configure_options[@]}"
+
+	echo "Run make for emu build..."
+	make
+}
+
+build() {
+	cd "${srcdir}/grub/"
+
+	echo "Build grub bios stuff..."
+	_build_grub-common_and_bios
+
+	echo "Build grub ${_EFI_ARCH} efi stuff..."
+	case "${CARCH}" in
+          x86_64|riscv64) _build_grub-efi
+        esac
+
+	if [[ "${CARCH}" == "x86_64" ]] && [[ "${_IA32_EFI_IN_ARCH_X64}" == "1" ]]; then
+		echo "Build grub i386 efi stuff..."
+		_EFI_ARCH="i386" _build_grub-efi
+	fi
+
+	if [[ "${_GRUB_EMU_BUILD}" == "1" ]]; then
+		echo "Build grub emu stuff..."
+		_build_grub-emu
+	fi
+}
+
+_package_grub-common_and_bios() {
+	cd "${srcdir}/grub-bios/"
 
 	echo "Run make install for bios build..."
 	make DESTDIR="${pkgdir}/" bashcompletiondir="/usr/share/bash-completion/completions" install
 
 	echo "Remove gdb debugging related files for bios build..."
-	rm -fv "${pkgdir}/usr/lib/grub/powerpc-ieee1275"/*.module || true
-	rm -fv "${pkgdir}/usr/lib/grub/powerpc-ieee1275"/*.image || true
-	rm -fv "${pkgdir}/usr/lib/grub/powerpc-ieee1275"/{kernel.exec,gdb_grub,gmodule.pl} || true
+	rm -f "${pkgdir}/usr/lib/grub/${_TARGET}-${_PLATFORM}"/*.module || true
+	rm -f "${pkgdir}/usr/lib/grub/${_TARGET}-${_PLATFORM}"/*.image || true
+	rm -f "${pkgdir}/usr/lib/grub/${_TARGET}-${_PLATFORM}"/{kernel.exec,gdb_grub,gmodule.pl} || true
 
 	echo "Install /etc/default/grub (used by grub-mkconfig)..."
 	install -D -m0644 "${srcdir}/grub.default" "${pkgdir}/etc/default/grub"
+}
+
+_package_grub-efi() {
+	cd "${srcdir}/grub-efi-${_EFI_ARCH}/"
+
+	echo "Run make install for ${_EFI_ARCH} efi build..."
+	make DESTDIR="${pkgdir}/" bashcompletiondir="/usr/share/bash-completion/completions" install
+
+	echo "Remove gdb debugging related files for ${_EFI_ARCH} efi build..."
+	rm -f "${pkgdir}/usr/lib/grub/${_EFI_ARCH}-efi"/*.module || true
+	rm -f "${pkgdir}/usr/lib/grub/${_EFI_ARCH}-efi"/*.image || true
+	rm -f "${pkgdir}/usr/lib/grub/${_EFI_ARCH}-efi"/{kernel.exec,gdb_grub,gmodule.pl} || true
+
+	sed -e "s/%PKGVER%/${pkgver}/" < "${srcdir}/sbat.csv" > "${pkgdir}/usr/share/grub/sbat.csv"
+}
+
+_package_grub-emu() {
+	cd "${srcdir}/grub-emu/"
+
+	echo "Run make install for emu build..."
+	make DESTDIR="${pkgdir}/" bashcompletiondir="/usr/share/bash-completion/completions" install
+
+	echo "Remove gdb debugging related files for emu build..."
+	rm -f "${pkgdir}/usr/lib/grub/${_EMU_ARCH}-emu"/*.module || true
+	rm -f "${pkgdir}/usr/lib/grub/${_EMU_ARCH}-emu"/*.image || true
+	rm -f "${pkgdir}/usr/lib/grub/${_EMU_ARCH}-emu"/{kernel.exec,gdb_grub,gmodule.pl} || true
+}
+
+package() {
+	cd "${srcdir}/grub/"
+
+	echo "Package grub ${_EFI_ARCH} efi stuff..."
+	case "${CARCH}" in
+          x86_64|riscv64) _package_grub-efi
+        esac
+
+	if [[ "${CARCH}" == "x86_64" ]] && [[ "${_IA32_EFI_IN_ARCH_X64}" == "1" ]]; then
+		echo "Package grub i386 efi stuff..."
+		_EFI_ARCH="i386" _package_grub-efi
+	fi
+
+	if [[ "${_GRUB_EMU_BUILD}" == "1" ]]; then
+		echo "Package grub emu stuff..."
+		_package_grub-emu
+	fi
+
+	echo "Package grub bios stuff..."
+	_package_grub-common_and_bios
 }
