--- a/binutils/PKGBUILD
+++ b/binutils/PKGBUILD
@@ -8,7 +8,7 @@
 
 pkgname=binutils
 pkgver=2.38
-pkgrel=3.2
+pkgrel=3.3
 pkgdesc='A set of programs to assemble and manipulate binary and object files'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.gnu.org/software/binutils/'
@@ -25,11 +25,13 @@ options=(staticlibs !distcc !ccache debug)
 #source=(git+https://sourceware.org/git/binutils-gdb.git#commit=$_commit)
 source=(https://ftp.gnu.org/gnu/binutils/binutils-$pkgver.tar.xz{,.sig}
         gold-warn-unsupported.patch
-        fix-incorrect-undefined-symbol.patch)
+        fix-incorrect-undefined-symbol.patch
+        "binutils-pr28733.patch::https://sourceware.org/git/?p=binutils-gdb.git;a=patch;h=e4028336b19998e74a51dd0918a8b3922e08a537;hp=df0a549ebdae74ef9d233243b869d424e6a33c73")
 sha256sums=('e316477a914f567eccc34d5d29785b8b0f5a10208d36bbacedcc39048ecfe024'
             'SKIP'
             '2d430b66f84a19c154725ec535280c493be1d34f1a90f95208dce02fecd0e4e4'
-            'fd33b2f8cac7561cecf3fdbb5a50fd2f2dfa6420516cbe57c47784a06fa16bf6')
+            'fd33b2f8cac7561cecf3fdbb5a50fd2f2dfa6420516cbe57c47784a06fa16bf6'
+            '6c095f62d3bdf9d150f2b9dea3caf5d672140333760de598fdbec216c22e4be9')
 validpgpkeys=(3A24BC1E8FB409FA9F14371813FCEF89DD9E3C4F)
 
 prepare() {
@@ -53,6 +55,9 @@ prepare() {
   # fix incorrect "undefined reference" errors
   # https://sourceware.org/bugzilla/show_bug.cgi?id=28879
   patch -Np1 -i "${srcdir}"/fix-incorrect-undefined-symbol.patch
+
+  # riscv64: PR28733, add missing extension info to 'unrecognized opcode' error
+  patch -Np1 -i "${srcdir}"/binutils-pr28733.patch
 }
 
 build() {
