--- a/cdrtools/PKGBUILD
+++ b/cdrtools/PKGBUILD
@@ -5,9 +5,11 @@ pkgver=3.02a09
 pkgrel=5
 pkgdesc="Original cdrtools supporting CD, DVD and BluRay burning"
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url="http://cdrecord.org/"
 license=('CDDL')
 depends=('acl' 'libcap')
+makedepends=('imake')
 conflicts=('cdrkit')
 provides=('cdrkit')
 replaces=('cdrkit')
@@ -23,6 +25,9 @@ build() {
   sed -i 's|DEFINSGRP=.*|DEFINSGRP=root|' DEFAULTS/Defaults.linux
   # install rscsi to /usr/bin instead of /usr/sbin
   sed -i 's|INSDIR=.*|INSDIR=bin|' rscsi/Makefile
+
+  [ "${CARCH}" = 'riscv64' ] && \
+    ln -s RULES/i586-linux-cc.rul RULES/riscv64-linux-cc.rul
 
   export GMAKE_NOWARN=true
   make INS_BASE=/usr INS_RBASE=/ VERSION_OS="_ArchPOWER" LDOPTX="$LDFLAGS"
