--- a/dnsmasq/PKGBUILD
+++ b/dnsmasq/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=2.86
 pkgrel=1
 pkgdesc='Lightweight, easy to configure DNS forwarder and DHCP server'
 url='http://www.thekelleys.org.uk/dnsmasq/doc.html'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
 depends=('glibc' 'gmp' 'libidn2' 'libidn2.so' 'libdbus' 'libdbus-1.so'
          'libnetfilter_conntrack' 'nettle' 'libnettle.so' 'libhogweed.so')
