--- a/mkinitcpio-busybox/PKGBUILD
+++ b/mkinitcpio-busybox/PKGBUILD
@@ -5,36 +5,38 @@
 # Contributor: Thomas Bächler <thomas@archlinux.org>
 
 pkgname=mkinitcpio-busybox
-pkgver=1.31.1
-pkgrel=2
+pkgver=1.35.0
+pkgrel=1
 pkgdesc='Base initramfs tools'
-arch=(powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.busybox.net/"
 license=(GPL)
 depends=(glibc libxcrypt)
 options=(!buildflags)
 source=(https://busybox.net/downloads/busybox-$pkgver.tar.bz2{,.sig}
         config)
-sha256sums=('d0f940a72f648943c1f2211e0e3117387c31d765137d92bd8284a3fb9752a998'
+sha256sums=('faeeb244c35a348a334f4a59e44626ee870fb07b6884d68c10ae8bc19f83a694'
             'SKIP'
-            '2d724738dfb062b8676a8df0488a5e288fc7ceb305633fa6b8d672a722837e81')
+            'fe7bd3c7150c25a8ad24190d305a012b84766f34847a7efc7126e19261b0c711')
 validpgpkeys=('C9E9416F76E610DBD09D040F47B70C55ACC9965B') # Denis Vlasenko <vda.linux@googlemail.com>
 
 prepare() {
   cd "busybox-$pkgver"
-
+  
+  local safeflags="-march=${CARCH/_/-} -mtune=generic -Os -pipe -fno-strict-aliasing"
   case "${CARCH}" in
-    powerpc64le)
-      local safeflags="-mcpu=power8 -Os"
-      ;;
-    powerpc)
-      local safeflags="-Os"
-      ;;
-    *)
-      local safeflags="-march=${CARCH/_/-} -mtune=generic -Os -pipe -fno-strict-aliasing"
-    ;;
+  powerpc64le)
+    local safeflags="-mcpu=power8 -Os"
+  ;;
+  powerpc|riscv64)
+    local safeflags="-Os"
+  ;;
+  *)
+    local safeflags="-march=${CARCH/_/-} -mtune=generic -Os -pipe -fno-strict-aliasing"
+  ;;
   esac
 
+  # use make oldconfig for updating the config file
   sed 's|^\(CONFIG_EXTRA_CFLAGS\)=.*|\1="'"$safeflags"'"|' "$srcdir/config" > .config
 }
 
