--- a/qt5/qt5-declarative/PKGBUILD
+++ b/qt5/qt5-declarative/PKGBUILD
@@ -3,11 +3,11 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt5-declarative
-pkgver=5.15.2+kde+r46
-pkgrel=1.1
-_commit=29ee9a0e9f02ec74153a2cf09dc63722bc273544
+_basever=5.15.3
+pkgver=5.15.3+kde+r20
+pkgrel=1
+_commit=02105099301450c890e1caba977ef44efdc43da7
 arch=(x86_64 powerpc64le powerpc riscv64)
-arch=(powerpc)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
 pkgdesc='Classes for QML and JavaScript languages'
@@ -16,6 +16,7 @@ makedepends=('python' 'vulkan-headers' 'git')
 groups=('qt' 'qt5')
 conflicts=('qtchooser')
 _pkgfqn=qtdeclarative
+_pkgfqn=${pkgname/5-/}
 source=(git+https://invent.kde.org/qt/qt/$_pkgfqn#commit=$_commit
         qtdeclarative-5.15.2-riscv-atomic.patch
         big-endian-qtquick-software.patch)
@@ -33,8 +34,6 @@ prepare() {
   mkdir -p build
 
   cd $_pkgfqn
-  git revert -n 568763928a78b52373932b01be17e040f7c3fa50 # Revert version bump
-
   patch -Np1 -i ${srcdir}/qtdeclarative-5.15.2-riscv-atomic.patch
   patch -Np2 -i ${srcdir}/big-endian-qtquick-software.patch
 }
