--- a/cross-compilers/powerpc64-unknown-linux-gnu-linux-api-headers/PKGBUILD
+++ b/cross-compilers/powerpc64-unknown-linux-gnu-linux-api-headers/PKGBUILD
@@ -10,7 +10,7 @@ _target_arch=powerpc64
 _target=${_target_arch}-unknown-linux-gnu
 pkgname=${_target}-linux-api-headers
 pkgver=5.13.17
-pkgrel=2
+pkgrel=3
 pkgdesc="Kernel headers sanitized for use in userspace (${_target})"
 arch=(any)
 url='http://www.gnu.org/software/libc'
@@ -30,7 +30,7 @@ build() {
 
 package() {
   cd linux-${pkgver}
-  make INSTALL_HDR_PATH="$pkgdir/usr/$_target" ARCH=riscv headers_install
+  make INSTALL_HDR_PATH="$pkgdir/usr/$_target" ARCH=powerpc headers_install
 
   # use headers from libdrm
   rm -rf "$pkgdir/usr/$_target/include/drm"
