--- a/llvm/PKGBUILD
+++ b/llvm/PKGBUILD
@@ -19,13 +19,17 @@ source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
         don-t-accept-nullptr-as-GEP-element-type.patch
         no-strict-aliasing-DwarfCompileUnit.patch
         disable-bswap-for-spir.patch
-        llvm-config.h)
+        llvm-config.h
+        build-any.patch
+        riscv-generic.patch)
 sha256sums=('ec6b80d82c384acad2dc192903a6cf2cdbaffb889b84bfb98da9d71e630fc834'
             'SKIP'
             'a7e902a7612d0fdabe436a917468b043cc296bc89d8954bfc3126f737beb9ac4'
             'd1eff24508e35aae6c26a943dbaa3ef5acb60a145b008fd1ef9ac6f6c4faa662'
             'af163392fbc19d65d11ab4b1510a2eae39b417d6228023b3ba5395b138bb41f5'
-            '597dc5968c695bbdbb0eac9e8eb5117fcd2773bc91edf5ec103ecffffab8bc48')
+            '597dc5968c695bbdbb0eac9e8eb5117fcd2773bc91edf5ec103ecffffab8bc48'
+            'fa49cb1e9107d8d151a419d3c09f231f9fa42b8ea77a87de0392b44a7ea0076e'
+            '5c53e41a4011e7c65c43ed3871c09b544df9f73e35d09914d4463b2f9103b84e')
 validpgpkeys+=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
 validpgpkeys+=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
 
@@ -42,6 +46,9 @@ prepare() {
 
   # Fix an ISPC build failure (https://github.com/ispc/ispc/issues/2189)
   patch -Np2 -i ../disable-bswap-for-spir.patch
+
+  patch -Np1 -i ${srcdir}/build-any.patch
+  patch -Np1 -i ${srcdir}/riscv-generic.patch
 }
 
 build() {
