--- a/open-iscsi/PKGBUILD
+++ b/open-iscsi/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Stefan Kirrmann <stefan.kirrmann at gmail dot com>
 
 pkgname=open-iscsi
-pkgver=2.1.5
+pkgver=2.1.6
 pkgrel=1
 pkgdesc='iSCSI userland tools'
 arch=(x86_64 powerpc64le powerpc)
@@ -15,23 +15,8 @@ install=$pkgname.install
 backup=('etc/iscsi/iscsid.conf'
 	'etc/iscsi/initiatorname.iscsi')
 options=('docs')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/open-iscsi/open-iscsi/archive/$pkgver.tar.gz"
-        '0001-Fix-compiler-error-introduced-with-recent-IPv6-commit.patch')
-sha256sums=('d8a06c1ea86d2a312d598f52c151b210a34d82445a6f522f7c2bd6581b3a99af'
-            '4b0db394a45bc5a0cd68be840f0852e2d6cdba834cf2bf15e48a8ebf41e4b9d2')
-
-prepare() {
-  cd "$srcdir"/${pkgname}-${pkgver}
-
-  patch -Np1 < ../0001-Fix-compiler-error-introduced-with-recent-IPv6-commit.patch
-
-  case "${CARCH}" in
-    powerpc*)
-      sed 's@-Werror@@g' -i libopeniscsiusr/Makefile
-      sed 's@-Werror@@g' -i usr/Makefile
-    ;;
-  esac
-}
+source=("$pkgname-$pkgver.tar.gz::https://github.com/open-iscsi/open-iscsi/archive/$pkgver.tar.gz")
+sha256sums=('b67350d106696779c6bee421c60a64ade2a9dabe247dc4bd44f59c751e22d7f7')
 
 build() {
   cd "$srcdir"/${pkgname}-${pkgver}
