--- a/qemu/PKGBUILD
+++ b/qemu/PKGBUILD
@@ -1,33 +1,96 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
+# Contributor: David Runge <dvzrv@archlinux.org>
 # Contributor: Sébastien "Seblu" Luttringer <seblu@seblu.net>
 
 pkgbase=qemu
-pkgname=(qemu qemu-headless qemu-arch-extra qemu-headless-arch-extra
-         qemu-block-{iscsi,gluster} qemu-guest-agent)
+pkgname=(
+  qemu
+  qemu-headless
+  qemu-arch-extra
+  qemu-headless-arch-extra
+  qemu-block-{iscsi,gluster}
+  qemu-guest-agent
+)
 [ "${CARCH}" != 'powerpc' ] && pkgname+=(qemu-block-rbd)
 pkgdesc="A generic and open source machine emulator and virtualizer"
-pkgver=6.1.0
-pkgrel=2
-arch=(x86_64 powerpc64le powerpc)
+pkgver=6.2.0
+pkgrel=4
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL2 LGPL2.1)
 url="https://wiki.qemu.org/"
-_headlessdeps=(seabios gnutls libpng libaio numactl libnfs
-               lzo snappy curl vde2 libcap-ng spice libcacard usbredir libslirp
-               libssh zstd liburing ndctl dtc fuse3)
-depends=(virglrenderer sdl2 vte3 libpulse libjack.so brltty "${_headlessdeps[@]}")
-makedepends=(spice-protocol python libiscsi glusterfs python-sphinx xfsprogs ninja)
+# TODO: consider providing rdma-core
+# TODO: consider providing lzfse
+makedepends=(
+  alsa-lib
+  brltty
+  bzip2
+  cairo
+  curl
+  cdrtools
+  dtc
+  fuse3
+  gcc-libs
+  gdk-pixbuf2
+  glib2
+  glusterfs
+  gnutls
+  gtk3
+  jack
+  libaio
+  libbpf
+  libcacard
+  libcap-ng
+  libepoxy
+  libiscsi
+  libnfs
+  libpng
+  libpulse
+  libsasl
+  libseccomp
+  libslirp
+  libssh
+  liburing
+  libusb
+  libx11
+  libxkbcommon
+  lzo
+  mesa
+  meson
+  ncurses
+  ndctl
+  numactl
+  pam
+  python
+  python-sphinx
+  python-sphinx_rtd_theme
+  sdl2
+  sdl2_image
+  seabios
+  snappy
+  spice-protocol
+  spice
+  systemd
+  usbredir
+  vde2
+  virglrenderer
+  vte3
+  xfsprogs
+  zlib
+  zstd
+)
 makedepends_powerpc64le=(ceph)
 makedepends_x86_64=(ceph)
+options=(debug)
 source=(https://download.qemu.org/qemu-$pkgver.tar.xz{,.sig}
+        virtiofsd-glibc235.patch::https://github.com/qemu/qemu/commit/7b223e38603de3a75602e14914d26f9d4baf52eb.patch
         qemu-guest-agent.service
-        65-kvm.rules
-        fix_unix_sockets.diff::https://gitlab.com/qemu-project/qemu/-/commit/118d527f2e4baec5fe8060b22a6212468b8e4d3f.diff)
-sha512sums=('3378ae21c75b77ee6a759827f1fcf7b2a50a0fef07e3b0e89117108022a8d8655fa977e4d65596f4f24f7c735c6594d44b0c6f69732ea4465e88a7406b1d5d3c'
+        65-kvm.rules)
+sha512sums=('e9f8231c9e1cfcc41cb47f10a55d63f6b8aee307af00cf6acf64acb7aa4f49fa7e9d6330703a2abea15d8b7bbaba7d3cb08c83edd98d82642367b527df730817'
             'SKIP'
+            '3b8b1e346d02516195c8ba4a1e88a2f0d69639b75cdd5e57185db624ba514f49b6d373a7fb2ec77133fb75cd43a11ce0e96b7a948ec9fc7140ae7ef26c203cb6'
             '269c0f0bacbd06a3d817fde02dce26c99d9f55c9e3b74bb710bd7e5cdde7a66b904d2eb794c8a605bf9305e4e3dee261a6e7d4ec9d9134144754914039f176e4'
-            'bdf05f99407491e27a03aaf845b7cc8acfa2e0e59968236f10ffc905e5e3d5e8569df496fd71c887da2b5b8d1902494520c7da2d3a8258f7fd93a881dd610c99'
-            'a87b0da1d49b4d17e9128544c2b0f00f1ac5242adc7fd9e8c9efd24ab6791ed702b2a0866383d31c1bff3259c281c95a60a96453ad998256a8b133cfd7107a59')
+            'bdf05f99407491e27a03aaf845b7cc8acfa2e0e59968236f10ffc905e5e3d5e8569df496fd71c887da2b5b8d1902494520c7da2d3a8258f7fd93a881dd610c99')
 validpgpkeys=('CEACC9E15534EBABB82D3FA03353C9CEF108B584') # Michael Roth <flukshun@gmail.com>
 
 case $CARCH in
@@ -43,21 +106,24 @@ prepare() {
   mkdir -p extra-arch-{full,headless}/usr/{bin,share/qemu}
 
   cd ${pkgname}-${pkgver}
-  patch -p1 < ../fix_unix_sockets.diff  # FS#72115
+  patch -p1 < ../virtiofsd-glibc235.patch # FS#73856
 }
 
 build() {
-  _build full \
-    --audio-drv-list="pa alsa sdl jack"
+  _build full
 
   _build headless \
-    --audio-drv-list= \
     --disable-sdl \
     --disable-gtk \
     --disable-vte \
     --disable-brlapi \
     --disable-opengl \
-    --disable-virglrenderer
+    --disable-virglrenderer \
+    --disable-alsa \
+    --disable-jack \
+    --disable-oss \
+    --disable-pa \
+    --disable-sdl
 }
 
 _build() (
@@ -68,7 +134,6 @@ _build() (
     --sysconfdir=/etc \
     --localstatedir=/var \
     --libexecdir=/usr/lib/qemu \
-    --extra-ldflags="$LDFLAGS" \
     --smbd=/usr/bin/smbd \
     --enable-modules \
     --enable-sdl \
@@ -80,7 +145,60 @@ _build() (
 )
 
 package_qemu() {
-  optdepends=('qemu-arch-extra: extra architectures support')
+  depends=(
+    alsa-lib libasound.so
+    bzip2 libbz2.so
+    cairo
+    curl libcurl.so
+    dtc
+    fuse3
+    gcc-libs
+    gdk-pixbuf2 libgdk_pixbuf-2.0.so
+    glib2 libgio-2.0.so libglib-2.0.so libgmodule-2.0.so libgobject-2.0.so
+    gnutls
+    gtk3 libgdk-3.so libgtk-3.so
+    jack libjack.so
+    libaio
+    libbpf libbpf.so
+    libcacard
+    libcap-ng libcap-ng.so
+    libepoxy
+    libjpeg libjpeg.so
+    libnfs
+    libpng
+    libpulse libpulse.so
+    libsasl
+    libseccomp libseccomp.so
+    libslirp libslirp.so
+    libssh libssh.so
+    libusb libusb-1.0.so
+    liburing liburing.so
+    libx11
+    libxkbcommon libxkbcommon.so
+    lzo
+    mesa
+    ncurses libncursesw.so
+    ndctl
+    numactl libnuma.so
+    pam libpam.so
+    pixman libpixman-1.so
+    seabios
+    sdl2
+    sdl2_image
+    snappy
+    spice libspice-server.so
+    systemd-libs libudev.so
+    usbredir
+    virglrenderer
+    vde2
+    vte3 libvte-2.91.so
+    zlib
+    zstd libzstd.so
+  )
+  optdepends=(
+    'brltty: for braille device support'
+    'qemu-arch-extra: extra architectures support'
+  )
   provides=(qemu-headless)
   conflicts=(qemu-headless)
   replaces=(qemu-kvm)
@@ -90,7 +208,43 @@ package_qemu() {
 
 package_qemu-headless() {
   pkgdesc="QEMU without GUI"
-  depends=("${_headlessdeps[@]}")
+  depends=(
+    bzip2 libbz2.so
+    curl libcurl.so
+    dtc
+    fuse3
+    gcc-libs
+    glib2 libgio-2.0.so libglib-2.0.so libgmodule-2.0.so libgobject-2.0.so
+    gnutls
+    libaio
+    libbpf libbpf.so
+    libcacard
+    libcap-ng libcap-ng.so
+    libjpeg libjpeg.so
+    libnfs
+    libpng
+    libsasl
+    libseccomp libseccomp.so
+    libslirp libslirp.so
+    libssh libssh.so
+    libusb libusb-1.0.so
+    liburing liburing.so
+    libxkbcommon libxkbcommon.so
+    lzo
+    ndctl
+    numactl libnuma.so
+    ncurses libncursesw.so
+    pam libpam.so
+    pixman libpixman-1.so
+    seabios
+    snappy
+    spice libspice-server.so
+    systemd-libs libudev.so
+    usbredir
+    vde2
+    zlib
+    zstd libzstd.so
+  )
   optdepends=('qemu-headless-arch-extra: extra architectures support')
 
   _package headless
@@ -178,41 +332,101 @@ _package() {
 
 package_qemu-arch-extra() {
   pkgdesc="QEMU for foreign architectures"
-  depends=(qemu)
+  depends=(
+    dtc
+    fuse3
+    gcc-libs
+    gnutls
+    libaio
+    libbpf libbpf.so
+    glib2 libgio-2.0.so libglib-2.0.so libgobject-2.0.so libgmodule-2.0.so
+    libjpeg libjpeg.so
+    libpng
+    libsasl
+    libseccomp libseccomp.so
+    libslirp libslirp.so
+    liburing liburing.so
+    lzo
+    ndctl
+    numactl libnuma.so
+    pam libpam.so
+    pixman libpixman-1.so
+    snappy
+    systemd-libs
+    libudev.so
+    qemu
+    vde2
+    zlib
+    zstd
+    libzstd.so
+  )
+  optdepends=(
+    'edk2-armvirt: for aarch64 UEFI support'
+    'edk2-ovmf: for ia32 and x64 UEFI support'
+  )
   provides=(qemu-headless-arch-extra)
   conflicts=(qemu-headless-arch-extra)
   options=(!strip)
 
-  mv extra-arch-full/usr "$pkgdir"
+  mv -v extra-arch-full/usr "$pkgdir"
 }
 
 package_qemu-headless-arch-extra() {
   pkgdesc="QEMU without GUI, for foreign architectures"
-  depends=(qemu-headless)
+  depends=(
+    dtc
+    fuse3
+    gcc-libs
+    gnutls
+    libaio
+    libbpf libbpf.so
+    glib2 libgio-2.0.so libglib-2.0.so libgobject-2.0.so libgmodule-2.0.so
+    libjpeg libjpeg.so
+    libpng
+    libsasl
+    libseccomp libseccomp.so
+    libslirp libslirp.so
+    liburing liburing.so
+    lzo
+    ndctl
+    numactl libnuma.so
+    pam libpam.so
+    pixman libpixman-1.so
+    snappy
+    qemu-headless
+    systemd-libs libudev.so
+    vde2
+    zlib
+    zstd libzstd.so
+  )
+  optdepends=(
+    'edk2-armvirt: for aarch64 UEFI support'
+    'edk2-ovmf: for ia32 and x64 UEFI support'
+  )
   options=(!strip)
 
-  mv extra-arch-headless/usr "$pkgdir"
+  mv -v extra-arch-headless/usr "$pkgdir"
 }
 
 package_qemu-block-iscsi() {
   pkgdesc="QEMU iSCSI block module"
-  depends=(glib2 libiscsi)
+  depends=(glibc libiscsi)
 
-  install -D build-full/block-iscsi.so "$pkgdir/usr/lib/qemu/block-iscsi.so"
+  install -vDm 755 build-full/block-iscsi.so -t "$pkgdir/usr/lib/qemu/"
 }
 
 package_qemu-block-rbd() {
   pkgdesc="QEMU RBD block module"
-  depends=(glib2 ceph-libs)
+  depends=(glibc ceph-libs)
 
-  install -D build-full/block-rbd.so "$pkgdir/usr/lib/qemu/block-rbd.so"
+  install -vDm 755 build-full/block-rbd.so -t "$pkgdir/usr/lib/qemu/"
 }
 
 package_qemu-block-gluster() {
   pkgdesc="QEMU GlusterFS block module"
-  depends=(glib2 glusterfs)
+  depends=(glibc glusterfs)
 
-  install -D build-full/block-gluster.so "$pkgdir/usr/lib/qemu/block-gluster.so"
+  install -vDm 755 build-full/block-gluster.so -t "$pkgdir/usr/lib/qemu/"
 }
 
 package_qemu-guest-agent() {
@@ -220,9 +434,9 @@ package_qemu-guest-agent() {
   depends=(gcc-libs glib2 libudev.so liburing)
   install=qemu-guest-agent.install
 
-  install -D build-full/qga/qemu-ga "$pkgdir/usr/bin/qemu-ga"
-  install -Dm644 qemu-guest-agent.service "$pkgdir/usr/lib/systemd/system/qemu-guest-agent.service"
-  install -Dm755 "$srcdir/qemu-$pkgver/scripts/qemu-guest-agent/fsfreeze-hook" "$pkgdir/etc/qemu/fsfreeze-hook"
+  install -vDm 755 build-full/qga/qemu-ga -t "$pkgdir/usr/bin/"
+  install -vDm 644 qemu-guest-agent.service -t "$pkgdir/usr/lib/systemd/system/"
+  install -vDm 755 "$srcdir/qemu-$pkgver/scripts/qemu-guest-agent/fsfreeze-hook" -t "$pkgdir/etc/qemu/"
 }
 
 # vim:set ts=2 sw=2 et:
