--- a/qt6/qt6-networkauth/PKGBUILD
+++ b/qt6/qt6-networkauth/PKGBUILD
@@ -4,22 +4,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-networkauth
-_qtver=6.1.2
+_qtver=6.2.3
 pkgver=${_qtver/-/}
-pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=2
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
 pkgdesc='Network authentication module'
 depends=(qt6-base)
-makedepends=(cmake)
+makedepends=(cmake ninja)
 groups=(qt6)
+options=(debug)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz)
-sha256sums=('a02740a3a2a90f011ba1eac342a4a09f6381b65bf5ed3fc41c0725fbeb7f9c60')
+sha256sums=('6e074154b72d0654d3cbb26b4e8ca0dffe3d20b1d0a1d8e6b298e011598ab847')
 
 build() {
-  cmake -B build -S $_pkgfn
+  cmake -B build -S $_pkgfn -G Ninja
   cmake --build build
 }
 
