--- a/rust/PKGBUILD
+++ b/rust/PKGBUILD
@@ -7,7 +7,7 @@
 
 pkgname=('rust' 'rust-docs')
 epoch=1
-pkgver=1.58.0
+pkgver=1.59.0
 pkgrel=1
 
 _llvm_ver=13.0.1
@@ -167,6 +167,14 @@ package_rust-docs() {
 
 # vim:set ts=2 sw=2 et:
 sha256sums=('0ad531a32f3c2e996b9322c6b7262a9cfe557e49ff3363adea07b575106cd770'
+            'SKIP'
+            '7b33955031f9a9c5d63077dedb0f99d77e4e7c996266952c1cec55626dca5dfc'
+            'SKIP'
+            'a2a8a7c6a5732f79cc92f81d3c8380589c4e2b9a996fb565bbefe42f66b62597'
+            '0f8cfbe0387dd62909fe9cb9523223ae1c2319494e2caf5fa4d0592198631b3e'
+            '977da945985dce4484ace8794cbc91241b1f3c27311c1a8b201231db6e1d19e5'
+            'fcf3c4442ba6a9e59415652ce8514428b2e37b80c5fe7d07fb44259ad37abafb')
+sha256sums=('a7c8eeaee85bfcef84c96b02b3171d1e6540d15179ff83dddd9eafba185f85f9'
             'SKIP'
             '7b33955031f9a9c5d63077dedb0f99d77e4e7c996266952c1cec55626dca5dfc'
             'SKIP'
