--- a/wireshark/PKGBUILD
+++ b/wireshark/PKGBUILD
@@ -8,11 +8,11 @@
 
 pkgbase=wireshark
 pkgname=('wireshark-cli' 'wireshark-qt')
-pkgver=3.4.8
+pkgver=3.6.2
 pkgrel=1
 pkgdesc='Network traffic and protocol analyzer/sniffer'
 url='https://www.wireshark.org/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
 makedepends=('glibc' 'cmake' 'ninja' 'c-ares' 'libmaxminddb' 'qt5-tools' 'qt5-svg'
              'qt5-multimedia' 'krb5' 'libpcap' 'libssh' 'libxml2' 'libnghttp2'
@@ -23,9 +23,9 @@ makedepends=('glibc' 'cmake' 'ninja' 'c-ares' 'libmaxminddb' 'qt5-tools' 'qt5-sv
 options=('!emptydirs')
 source=(https://www.wireshark.org/download/src/${pkgbase}-${pkgver}.tar.xz
         wireshark.sysusers)
-sha512sums=('962ab4d85ca0686c69470a63e516c0e46fbd8f9eb09e1c5f689f37b5c804c6da3e50b96144adc8e2bff6af67e1c9435db54581c8f1ec5908e27e348691bda1c8'
+sha512sums=('cd4a8077629632e9a924600f9af2ffd01917726fd64504d6f3b4a2a1cb5340c9c0bac23e4abab63743952a0a78efd2e09bb125b127d24e85eca6fa41928fd070'
             '3956c1226e64f0ce4df463f80b55b15eed06ecd9b8703b3e8309d4236a6e1ca84e43007336f3987bc862d8a5e7cfcaaf6653125d2a34999a0f1357c52e7c4990')
-b2sums=('bdd70b77b2582339fc563c91596b0419789f08c6a9e4895910cc703ba5726229acceeccdcf41b3c5831df711f3d635217f123759b86055d1b03742afed7c68e5'
+b2sums=('585cf925892ec9d5b6413ccc53c49035eba8a7cd9206f1354f0a808daec9b0f20fc72b3427a2b592f196dd6b2ab67fd35e73d152a20c16fb0f0153c6a03d3156'
         '3cebcc993f51eaf0e09673c77e0436598593ef5eff306d880415ccc8eecb32fee93c9a6986f1a7bb0835ab7f9732369d7c5a07e6c053d6293e73a1ea84c58a5c')
 
 prepare() {
@@ -62,18 +62,17 @@ package_wireshark-cli() {
   DESTDIR="${pkgdir}" ninja -C build install
 
   # wireshark uid group is 150
-  install -Dm 644 "${srcdir}/wireshark.sysusers" "${pkgdir}/usr/lib/sysusers.d/wireshark.conf"
-  chgrp 150 "${pkgdir}/usr/bin/dumpcap"
-  chmod 754 "${pkgdir}/usr/bin/dumpcap"
+  install -Dm 644 "${srcdir}"/wireshark.sysusers "${pkgdir}"/usr/lib/sysusers.d/wireshark.conf
+  chgrp 150 "${pkgdir}"/usr/bin/dumpcap
+  chmod 754 "${pkgdir}"/usr/bin/dumpcap
 
   cd "${pkgdir}"
   rm -r usr/share/mime \
     usr/share/icons \
     usr/share/man/man1/wireshark.1 \
-    usr/share/doc/wireshark/wireshark.html \
     usr/bin/wireshark \
-    usr/share/applications/wireshark.desktop \
-    usr/share/appdata/wireshark.appdata.xml
+    usr/share/applications/org.wireshark.Wireshark.desktop \
+    usr/share/metainfo/org.wireshark.Wireshark.metainfo.xml
 }
 
 package_wireshark-qt() {
@@ -90,13 +89,15 @@ package_wireshark-qt() {
   install -d "${srcdir}/staging"
   DESTDIR="${srcdir}/staging" ninja -C build install
 
-  install -Dm 755 build/run/wireshark -t "${pkgdir}/usr/bin"
-  install -Dm 644 build/doc/wireshark.1 -t "${pkgdir}/usr/share/man/man1"
-  install -Dm 644 build/doc/wireshark.html -t "${pkgdir}/usr/share/doc/wireshark"
-  install -Dm 644 wireshark.desktop -t "${pkgdir}/usr/share/applications"
-  install -Dm 644 wireshark.appdata.xml -t "${pkgdir}/usr/share/appdata"
-  install -Dm 644 wireshark-mime-package.xml "${pkgdir}/usr/share/mime/packages/wireshark.xml"
-  mv "${srcdir}/staging/usr/share/icons" "${pkgdir}/usr/share/icons"
+  install -Dm 755 build/run/wireshark -t "${pkgdir}"/usr/bin
+  install -Dm 644 build/doc/wireshark.1 -t "${pkgdir}"/usr/share/man/man1
+  install -Dm 644 build/doc/wireshark.html -t "${pkgdir}"/usr/share/doc/wireshark
+
+  cd "${srcdir}"/staging/usr/share
+  install -Dm 644 applications/org.wireshark.Wireshark.desktop -t "${pkgdir}"/usr/share/applications
+  install -Dm 644 mime/packages/org.wireshark.Wireshark.xml -t "${pkgdir}"/usr/share/mime/packages
+  install -Dm 644 metainfo/org.wireshark.Wireshark.metainfo.xml -t "${pkgdir}"/usr/share/metainfo
+  mv icons "${pkgdir}"/usr/share/icons
 }
 
 # vim: ts=2 sw=2 et:
