* update base to 4-3

--- a/base/PKGBUILD
+++ b/base/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=base
 pkgver=4
-pkgrel=2
+pkgrel=3
 pkgdesc='Minimal package set to define a basic Arch Linux installation'
 url='https://www.archlinux.org'
 arch=('powerpc64le' 'powerpc' 'riscv64')
@@ -21,7 +21,7 @@ depends=(
   'e2fsprogs' 'gettext' 'pciutils' 'psmisc' 'shadow' 'util-linux' 'bzip2' 'gzip' 'xz'
 
   # distro defined requirements
-  'licenses' 'pacman' 'systemd' 'systemd-sysvcompat'
+  'licenses' 'pacman' 'systemd' 'systemd-sysvcompat' 'mkinitcpio'
 
   # networking, ping, etc
   'iputils' 'iproute2'
