* add flite for riscv64

--- a/flite/PKGBUILD
+++ b/flite/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=flite
 pkgver=2.2
 pkgrel=1
 pkgdesc="A lightweight speech synthesis engine"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://www.festvox.org/flite/"
 license=(custom)
 depends=(alsa-lib)
@@ -25,7 +25,8 @@ build() {
   ./configure --prefix=/usr --enable-shared \
 			    --with-audio=alsa \
 			    --with-vox=cmu_us_kal16 \
-			    --with-langvox=archlinux
+			    --with-langvox=archlinux \
+			    --build=${CHOST}
   make
 }
 
