* update qt5-speech to 5.15.3+kde+r1-1

--- a/qt5/qt5-speech/PKGBUILD
+++ b/qt5/qt5-speech/PKGBUILD
@@ -3,20 +3,27 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=qt5-speech
-_qtver=5.15.2
-pkgver=${_qtver/-/}
+_basever=5.15.3
+pkgver=5.15.3+kde+r1
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+_commit=08b27c29aadc0cc0303cca97c9a3baa2a690dfe4
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
 pkgdesc='Qt module to make text to speech and speech recognition easy'
 depends=(qt5-multimedia)
-makedepends=(flite speech-dispatcher)
+makedepends=(git flite speech-dispatcher)
 optdepends=('flite: flite TTS backend' 'speech-dispatcher: speech-dispatcher TTS backend')
 groups=(qt qt5)
-_pkgfqn="${pkgname/5-/}-everywhere-src-${_qtver}"
-source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/submodules/${_pkgfqn}.tar.xz")
-sha256sums=('c810fb9eecb08026434422a32e79269627f3bc2941be199e86ec410bdfe883f5')
+_pkgfqn=${pkgname/5-/}
+source=(git+https://invent.kde.org/qt/qt/$_pkgfqn#commit=$_commit)
+sha256sums=('SKIP')
+options=(debug)
+
+pkgver() {
+  cd $_pkgfqn
+  echo "$_basever+kde+r"`git rev-list --count v$_basever-lts-lgpl..$_commit`
+}
 
 prepare() {
   mkdir -p build
