* update linux-lts to 5.10.106-1

--- a/linux-lts/PKGBUILD
+++ b/linux-lts/PKGBUILD
@@ -1,7 +1,7 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 pkgbase=linux-lts
-pkgver=5.10.101
+pkgver=5.10.106
 pkgrel=1
 pkgdesc='LTS Linux'
 url="https://www.kernel.org/"
@@ -22,21 +22,23 @@ source=(
   ppc-vas-on-4k.patch
   ppc32-cpu-hotplug.patch
   ppc64le-fix-static-keys.patch
+  linux-powerpc-binutils-2.38.patch
 )
 validpgpkeys=(
   'ABAF11C65A2970B130ABE3C479BE3E4300411886'  # Linus Torvalds
   '647F28654894E3BD457199BE38DBBDC86092693E'  # Greg Kroah-Hartman
 )
 # https://www.kernel.org/pub/linux/kernel/v5.x/sha256sums.asc
-sha256sums=('0749258cb7ee47c478dfc34857e8930d41bfe0b074e80e9f57cbfa56d0ba1c8e'
+sha256sums=('c68651c8c70e2443ab6ebd1a3ed4e06694f988ffa40a664d8374f0cee0a3597a'
             'SKIP'
             '87a62384d87b23192f3e565733420d48d925d68d4a57c460db876b628960d3e4'
-            'a02b0419c99f7e00e54784e5e7004cf08df0688cce7d3200c398be568c004a4e'
+            'd141d782231a7358e8a155b486cf0825598ca7863e2570293415c9cfdfd9c267'
             '4cd851daa6c11d426bd42f3d29dbd6540437f30566381dae6663f4070b9b77c8'
             '0ef28fe4f3810d579425f84b507aaae06c34ba921db25d78017f2ee5de06d22d'
             'ae8f204127bb86ae202d50c3a01f524c24b194b1ea159fa51e2f07e1f94fead3'
             'f12714da37052b0a8816c259a0d488c73da0dc21bb66cf271c2c8580785e6143'
-            'c262e8670e94fca76d63425ae614d6d87cce5c40ac7b01c25123208abf8e4867')
+            'c262e8670e94fca76d63425ae614d6d87cce5c40ac7b01c25123208abf8e4867'
+            'd8b441038c901e31af7db6eee4de1ebd4d2cf2b98fa4701a93d02d3eaf3b5142')
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
 export KBUILD_BUILD_TIMESTAMP="$(date -Ru${SOURCE_DATE_EPOCH:+d @$SOURCE_DATE_EPOCH})"
