* update various CPAN modules

--- a/perl/perl-class-data-inheritable/PKGBUILD
+++ b/perl/perl-class-data-inheritable/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=perl-class-data-inheritable
 pkgver=0.09
-pkgrel=1
+pkgrel=2
 pkgdesc="Inheritable, overridable class data "
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://search.cpan.org/dist/Class-Data-Inheritable"
 license=('GPL' 'PerlArtistic')
 depends=('perl>=5.10.0')
