--- a/perl/perl-yaml-libyaml/PKGBUILD
+++ b/perl/perl-yaml-libyaml/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname='perl-yaml-libyaml'
 pkgver=0.83
-pkgrel=1
+pkgrel=2
 pkgdesc="Perl YAML Serialization using XS and libyaml"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
