--- a/perl/perl-io-tty/PKGBUILD
+++ b/perl/perl-io-tty/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=perl-io-tty
 pkgver=1.16
-pkgrel=1
+pkgrel=2
 pkgdesc="Provide an interface to TTYs and PTYs"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://search.cpan.org/dist/IO-Tty/"
 license=("GPL" "PerlArtistic")
 depends=('glibc')
