* update imap to 2007f-14

--- a/imap/PKGBUILD
+++ b/imap/PKGBUILD
@@ -3,8 +3,8 @@
 pkgbase=imap
 pkgname=(imap c-client)
 pkgver=2007f
-pkgrel=13
-arch=(x86_64 powerpc64le powerpc)
+pkgrel=14
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('APACHE')
 url="https://github.com/uw-imap/imap"
 makedepends=('pam' 'git')
@@ -32,6 +32,7 @@ prepare() {
 
 build() {
   cd "$srcdir/$pkgbase-src"
+  CFLAGS+=" -ffat-lto-objects"
   # NOTE: if you wish to enforce SSL, use SSLTYPE=unix.nopwd
 
   yes "y" | make lnp EXTRAAUTHENTICATORS=gss PASSWDTYPE=pam SPECIALAUTHENTICATORS=ssl SSLTYPE=unix EXTRACFLAGS="${CFLAGS} -fPIC -lgssapi_krb5 -lkrb5 -lk5crypto -lcom_err -lpam" EXTRALDFLAGS="${LDFLAGS}"
